Comment RNG errors; edit Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 
 # project details
-project(YaosApp VERSION 1.0)
-set(GARBLER_EXEC_NAME yaos_garbler)
-set(EVALUATOR_EXEC_NAME yaos_evaluator)
+project(GMWApp VERSION 1.0)
+set(PARTICIPANT_NAME gmw_participant)
 set(OTTEST_EXEC_NAME ot_test)
-set(LIBRARY_NAME yaos_app_lib)
-set(LIBRARY_NAME_SHARED yaos_app_lib_shared)
+set(LIBRARY_NAME gmw_app_lib)
+set(LIBRARY_NAME_SHARED gmw_app_lib_shared)
 set(LIBRARY_NAME_TA yaos_app_lib_ta)
 
 # packages
@@ -44,37 +43,8 @@ add_library(${LIBRARY_NAME} ${SOURCES})
 target_include_directories(${LIBRARY_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include-shared ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(${LIBRARY_NAME} PRIVATE ${LIBRARY_NAME_SHARED})
 
-# add ta libraries
-if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
-  set(SOURCES_TA
-    src-ta/pkg/garbler.cxx
-    src-ta/pkg/evaluator.cxx
-    src-ta/drivers/cli_driver.cxx
-    src-ta/drivers/crypto_driver.cxx
-    src-ta/drivers/network_driver.cxx
-    src-ta/drivers/ot_driver.cxx)
-  add_library(${LIBRARY_NAME_TA} ${SOURCES_TA})
-  target_include_directories(${LIBRARY_NAME_TA} PUBLIC ${PROJECT_SOURCE_DIR}/include-shared ${PROJECT_SOURCE_DIR}/include-ta)
-  target_link_libraries(${LIBRARY_NAME_TA} PRIVATE ${LIBRARY_NAME_SHARED})
-endif()
-
-# add garbler executables
-if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
-  add_executable(${GARBLER_EXEC_NAME} src-ta/cmd/garbler.cxx)
-  target_link_libraries(${GARBLER_EXEC_NAME} PRIVATE ${LIBRARY_NAME_TA})
-else()
-  add_executable(${GARBLER_EXEC_NAME} src/cmd/garbler.cxx)
-  target_link_libraries(${GARBLER_EXEC_NAME} PRIVATE ${LIBRARY_NAME})
-endif()
-
-# add evaluator executables
-if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
-  add_executable(${EVALUATOR_EXEC_NAME} src-ta/cmd/evaluator.cxx)
-  target_link_libraries(${EVALUATOR_EXEC_NAME} PRIVATE ${LIBRARY_NAME_TA})
-else()
-  add_executable(${EVALUATOR_EXEC_NAME} src/cmd/evaluator.cxx)
-  target_link_libraries(${EVALUATOR_EXEC_NAME} PRIVATE ${LIBRARY_NAME})
-endif()
+add_executable(${PARTICIPANT_EXEC_NAME} src/cmd/participant.cxx)
+target_link_libraries(${PARTICIPANT_EXEC_NAME} PRIVATE ${LIBRARY_NAME})
 
 # add ot test executables
 if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
@@ -88,25 +58,13 @@ endif()
 # properties
 set_target_properties(
   ${LIBRARY_NAME}
-  ${GARBLER_EXEC_NAME}
-  ${EVALUATOR_EXEC_NAME}
+  ${PARTICIPANT_EXEC_NAME}
   ${OTTEST_EXEC_NAME}
     PROPERTIES
       CXX_STANDARD 20
       CXX_STANDARD_REQUIRED YES
       CXX_EXTENSIONS YES
 )
-
-# ta properties
-if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
-  set_target_properties(
-    ${LIBRARY_NAME_TA}
-        PROPERTIES
-          CXX_STANDARD 20
-          CXX_STANDARD_REQUIRED YES
-          CXX_EXTENSIONS YES
-  )
-endif()
 
 # add tests
 add_subdirectory(test)
