--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,37 @@ add_library(${LIBRARY_NAME} ${SOURCES})
 target_include_directories(${LIBRARY_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include-shared ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(${LIBRARY_NAME} PRIVATE ${LIBRARY_NAME_SHARED})
 
-add_executable(${PARTICIPANT_EXEC_NAME} src/cmd/participant.cxx)
-target_link_libraries(${PARTICIPANT_EXEC_NAME} PRIVATE ${LIBRARY_NAME})
+# add ta libraries
+if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
+  set(SOURCES_TA
+    src-ta/pkg/garbler.cxx
+    src-ta/pkg/evaluator.cxx
+    src-ta/drivers/cli_driver.cxx
+    src-ta/drivers/crypto_driver.cxx
+    src-ta/drivers/network_driver.cxx
+    src-ta/drivers/ot_driver.cxx)
+  add_library(${LIBRARY_NAME_TA} ${SOURCES_TA})
+  target_include_directories(${LIBRARY_NAME_TA} PUBLIC ${PROJECT_SOURCE_DIR}/include-shared ${PROJECT_SOURCE_DIR}/include-ta)
+  target_link_libraries(${LIBRARY_NAME_TA} PRIVATE ${LIBRARY_NAME_SHARED})
+endif()
+
+# add garbler executables
+# if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
+#   add_executable(${GARBLER_EXEC_NAME} src-ta/cmd/garbler.cxx)
+#   target_link_libraries(${GARBLER_EXEC_NAME} PRIVATE ${LIBRARY_NAME_TA})
+# else()
+#   add_executable(${GARBLER_EXEC_NAME} src/cmd/garbler.cxx)
+#   target_link_libraries(${GARBLER_EXEC_NAME} PRIVATE ${LIBRARY_NAME})
+# endif()
+
+# add evaluator executables
+if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
+  add_executable(${EVALUATOR_EXEC_NAME} src-ta/cmd/participant.cxx)
+  target_link_libraries(${EVALUATOR_EXEC_NAME} PRIVATE ${LIBRARY_NAME_TA})
+else()
+  add_executable(${EVALUATOR_EXEC_NAME} src/cmd/participanet.cxx)
+  target_link_libraries(${EVALUATOR_EXEC_NAME} PRIVATE ${LIBRARY_NAME})
+endif()
 
 # add ot test executables
 if ( "$ENV{CS1515_TA_MODE}" STREQUAL "on" )
