update peer driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ target_link_libraries(${LIBRARY_NAME_SHARED} PRIVATE ${CURSES_LIBRARIES})
 
 # add student libraries
 set(SOURCES
+  src/pkg/peer_driver.cxx
   src/drivers/cli_driver.cxx
   src/drivers/crypto_driver.cxx
   src/drivers/network_driver.cxx
