--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SOURCES
   src/drivers/cli_driver.cxx
   src/drivers/crypto_driver.cxx
   src/drivers/network_driver.cxx
+  src/drivers/ot_driver.cxx
   src/drivers/share_driver.cxx)
 add_library(${LIBRARY_NAME} ${SOURCES})
 target_include_directories(${LIBRARY_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include-shared ${PROJECT_SOURCE_DIR}/include)
