compiling; working with gdb; debugging network stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ include(Documentation)
 include(Warnings)
 include(Curses)
 
+# Debugging
+set(CMAKE_BUILD_TYPE Debug)
+
 # add shared libraries
 set(SOURCES_SHARED
   src-shared/circuit.cxx
